# CSP-Fighter

./: .2u5dai44w38nn2855697213~  .36v3ygj709lky2100307625~  .gitignore  .replit  README.md  Set.py  Settings.txt  Stage_select.py  char1.txt  char1s.py  char1s2.py  char2s.py  char2s2.py  fight.py  fight2.py  main.py  moves.py  pyproject.toml  replit.nix  sorce.txt
.config/pypoetry/: config.toml
.github/: CODEOWNERS  dependabot.yml
.upm/: store.json
docs/: sources.md
src/csp-fighter/: char1.txt  char1s.py  fight.py  main.py  stage_select.py
src/csp_fighter/: __init__.py  char1s.py  char2s.py  fight.py  main.py  stage_select.py
txt/: char1.txt  char12.txt  char2.txt  char22.txt  health.txt  map.txt
