[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "python-template"
version = "0.1.0"

[tool.poetry.dependencies]
pygame = "^2.1.2"
python = ">=3.8.0,<3.11"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = { extras = [
    "pyflakes",
    "rope",
    "yapf",
], version = "^1.5.0" }
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 88
preview = false


[tool.isort]
atomic = true
line_length = 88
profile = "black"
skip_gitignore = true
